--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: /files/publications.pdf
 
   - title: "Talks"
-    url: /talks/    
+    url: /files/talks/    
 
   - title: "Teaching"
     url: /teaching/    
