--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,5 +21,8 @@ main:
   - title: "CV"
     url: /files/cv.pdf
     
+  - title: "personal"
+    url: /personal/
+    
   #- title: "Guide"
     #url: /markdown/
