something went wrong

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,7 +21,7 @@ main:
   - title: "CV"
     url: /files/cv.pdf
     
-  - title: "personal"
+  - title: "Personal"
     url: /personal/
     
   #- title: "Guide"
