re add personal

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,8 +21,8 @@ main:
   - title: "CV"
     url: /files/cv.pdf
     
-  #- title: "Personal"
-    #url: /personal/
+  - title: "Personal"
+    url: /personal/
     
   #- title: "Guide"
     #url: /markdown/
