--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,7 +19,7 @@ main:
     #url: /year-archive/
     
   - title: "CV"
-    url: /files/cv.pdf
+    url: /cv/
     
   - title: "Personal"
     url: /personal/
