html embeding try 2

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: /scholarship/
     
   - title: "Publications"
-    url: /files/publications.html
+    url: /publications/
 
   - title: "Talks"
     url: /files/talks.html  
