--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links 
 main:
   - title: "Scholarship"
-    url: /scholarship/
+    url: /files/scholarship/
     
   - title: "Publications"
     url: /files/publications/
