--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,13 @@
 # main links 
 main:
   - title: "Scholarship"
-    url: /files/scholarship/
+    url: /scholarship/
     
   - title: "Publications"
-    url: /files/publications/
+    url: /publications/
 
   - title: "Talks"
-    url: /files/talks/
+    url: /talks/
 
   - title: "Teaching"
     url: /teaching/    
