--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Janick Weberpals"
+title                    : "Janick Weberpals, RPh, PhD"
 title_separator          : "-"
 name                     : &name "Janick Weberpals"
 description              : &description "personal description"
