--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,6 +13,9 @@ main:
   - title: "Teaching"
     url: /teaching/    
     
+  - title: "Software"
+    url: /software/
+    
   - title: "CV"
     url: /cv/
     
