--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,7 +17,7 @@ main:
     url: /software/
     
   - title: "CV"
-    url: /cv/
+    url: /files/Resume_2_page.pdf
     
   #- title: "Portfolio"
     #url: /portfolio/
