test add gitlab

--- a/_config.yml
+++ b/_config.yml
@@ -90,13 +90,14 @@ author:
   email            : "jweberpals@bwh.harvard.edu"
   researchgate     : 
   uri              :
-  bitbucket        :
+  bitbucket        : "https://gitlab-scm.partners.org/drugepi"
   codepen          :
   dribbble         :
   flickr           :
   facebook         :
   foursquare       :
   github           : "janickweberpals"
+  gitlab           : "https://gitlab-scm.partners.org/drugepi"
   google_plus      :
   keybase          :
   instagram        :
