--- a/_config.yml
+++ b/_config.yml
@@ -90,14 +90,13 @@ author:
   email            : "jweberpals@bwh.harvard.edu"
   researchgate     : 
   uri              :
-  bitbucket        : "https://gitlab-scm.partners.org/drugepi"
+  bitbucket        : 
   codepen          :
   dribbble         :
   flickr           :
   facebook         :
   foursquare       :
   github           : "janickweberpals"
-  gitlab           : "https://gitlab-scm.partners.org/drugepi"
   google_plus      :
   keybase          :
   instagram        :
